# axum-api

./: .gitignore  Cargo.toml  Makefile  README.md  openapi.yaml
src/: app.rs  database.rs  errors.rs  logger.rs  main.rs  settings.rs
src/models/: cat.rs  mod.rs  user.rs
src/routes/: cat.rs  status.rs  user.rs
src/tests/: mod.rs  setup.rs  utils.rs
src/tests/routes/: cat.rs  status.rs  user.rs
src/utils/: authenticate_request.rs  custom_response.rs  date.rs  mod.rs  models.rs  pagination.rs  to_object_id.rs  token.rs
