[package]
name = "axum-api"
version = "0.1.0"
edition = "2021"

[dependencies]
config = "0.14.1"
serde = "1.0.214"
once_cell = "1.20.2"
axum = "0.7.7"
bcrypt = "0.15.1"
wither = "0.9.0"
serde_json = "1.0.132"
thiserror = "1.0.66"
tokio = "1.41.0"
async-trait = "0.1.83"
futures = "0.3.31"
validator = "0.18.1"
chrono = "0.4.38"
bson = "2.13.0"
jsonwebtoken = "9.3.0"
headers = "0.4.0"
axum-extra = { version = "0.9.4", features = ["typed-header"] }
bytes = "0.5.6"
tracing = "0.1.40"
mime = "0.3.17"

tower-http = { version = "0.6.1", features = [
    "trace",
    "compression-br",
    "propagate-header",
    "sensitive-headers",
    "cors",
] }
tracing-subscriber = "0.3.18"
reqwest = "0.10.10"
pretty_assertions = "1.4.1"
assert-json-diff = "2.0.2"
